[package]
name = "secret-dungeon-story"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
reqwest = {version = "*", features = ["json", "blocking"]}
serde = {version = "*", features = ["derive"]}
dotenv = "*"
bevy_egui = "0.21"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3